# Hackathon2-multi-tasking-web

PhaseIII/: .gitignore  CLAUDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  IMPLEMENTATION_SUMMARY.md  README.md  check_db.py  check_db_config.py  check_engine.py  check_new_task.py  debug_db_config.py  direct_db_test.py  direct_test.py  migrate_data.py  openapi_spec.json  simulate_api_call.py  temp_token.json  test_api.py  test_endpoint.py  test_registration.py  verify_neon_data.py
PhaseIII/.claude/: settings.local.json
PhaseIII/backend/: .env.example  add_test_user.py  create_test_user.py  migrate_schema.py  pyproject.toml  requirements.txt  start_server.py  start_with_env.py  test_chatbot.py  test_user_lookup.py  todo_app.db
PhaseIII/backend/src/: database_init.py  main.py  mcp_server.py
PhaseIII/backend/src/api/: deps.py
PhaseIII/backend/src/api/v1/: api.py  auth.py  chat.py  chat_endpoints.py  todos.py
PhaseIII/backend/src/core/: config.py  database.py  errors.py  logging.py  mcp_client.py  security.py
PhaseIII/backend/src/middleware/: auth.py
PhaseIII/backend/src/models/: __init__.py  conversation.py  message.py  task.py  todo.py  user.py
PhaseIII/backend/src/services/: agent_service.py  auth.py  auth_service.py  conversation_service.py  mcp_services.py  todo_service.py
PhaseIII/frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
PhaseOne/: .gitignore  CLAUDE.md  README.md  demo_app.py  test_interactive.py  test_main.py
PhaseOne/.claude/: settings.local.json
PhaseOne/src/: exceptions.py
PhaseOne/src/cli/: main.py
(+111 files in other folders)
